Bug 265491 - kmail --composer warning when kontact is running
Summary: kmail --composer warning when kontact is running
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 269550 270211 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-05 10:24 UTC by Franz Trischberger
Modified: 2011-07-14 13:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Franz Trischberger 2011-02-05 10:24:01 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

I use kontact to manage all my PIM. Until kontact-4.4.10, I used a ServiceMenu to send files as Attachment from Dolphin. After the Upgrade to kmail2, this does not work anymore.
"kmail --composer" says it is dangerous to launch kmail, when kontact is running. But I don't want to launch kmail, I just want to launch the Composer.

It would be nice, if the options passed to kmail could be handled correctly again.

Thx
Franz

Reproducible: Always
Comment 1 Franz Trischberger 2011-02-05 10:59:37 UTC
I just realised the "ksendemail"-executable, which works as expected. Could this be stated in kmail --help, too? Or better - when "kmail --compser" is executed, when kontact is running.
Comment 2 Elias Probst 2011-04-06 12:18:09 UTC
*** Bug 270211 has been marked as a duplicate of this bug. ***
Comment 3 Elias Probst 2011-04-06 12:28:27 UTC
Another problem here: When setting KMail as default mail application through
Systemsettings' 'Default Components' KCM, the same problem appears, as 'kmail
--composer' is called then instead of ksendemail.

I think kmail itself should be able to handle this again, otherwise it would
just break to many 3rd-party applications accessing it in the usual way.
Comment 4 Elias Probst 2011-04-06 12:48:11 UTC
sergio proposed the following fix on #kontact:

diff --git a/kontact/plugins/kmail/kmail_plugin.cpp b/kontact/plugins/kmail/kmail_plugin.cpp
index 1e1b750..8a289c8 100644
--- a/kontact/plugins/kmail/kmail_plugin.cpp
+++ b/kontact/plugins/kmail/kmail_plugin.cpp
@@ -50,7 +50,7 @@ using namespace KCalCore;
 EXPORT_KONTACT_PLUGIN( KMailPlugin, kmail )
 
 KMailPlugin::KMailPlugin( KontactInterface::Core *core, const QVariantList & )
-  : KontactInterface::Plugin( core, core, "kmail" ), m_instance( 0 )
+  : KontactInterface::Plugin( core, core, "kmail2" ), m_instance( 0 )
 {
   setComponentData( KontactPluginFactory::componentData() );

It works as expected for me, but should be double-checked by a KMail dev for possible sideeffect.s
Comment 5 Christophe Marin 2011-04-06 16:11:19 UTC
*** Bug 269550 has been marked as a duplicate of this bug. ***
Comment 6 Thomas Tanghus 2011-06-24 07:26:03 UTC
Same issue here.
KDE SC 4.6.4
KDEPIM 4.6.0
KMail 2.1.0
Comment 7 Christophe Marin 2011-07-14 13:16:51 UTC
Git commit 8f603f5f988a53fdd480f568c704417ea5fa7212 by Christophe Giboudeaux.
Committed on 14/07/2011 at 15:16.
Pushed by cgiboudeaux into branch 'master'.

Change appName to kmail2.
This way, clicking on a mailto link will not result in a warning if Kontact is running.

BUG: 265491

M  +1    -1    kontact/plugins/kmail/kmail_plugin.cpp     

http://commits.kde.org/kdepim/8f603f5f988a53fdd480f568c704417ea5fa7212
Comment 8 Christophe Marin 2011-07-14 13:17:27 UTC
Git commit 63b6680243a7e32fbcf7a0f0ad41fe68960474d0 by Christophe Giboudeaux.
Committed on 14/07/2011 at 15:16.
Pushed by cgiboudeaux into branch '4.7'.

Change appName to kmail2.
This way, clicking on a mailto link will not result in a warning if Kontact is running.

BUG: 265491
(cherry picked from commit 8f603f5f988a53fdd480f568c704417ea5fa7212)

M  +1    -1    kontact/plugins/kmail/kmail_plugin.cpp     

http://commits.kde.org/kdepim/63b6680243a7e32fbcf7a0f0ad41fe68960474d0
Comment 9 Christophe Marin 2011-07-14 13:17:42 UTC
Git commit d5794e75bc437435e99d9f7d10e6a75f9730d0c6 by Christophe Giboudeaux.
Committed on 14/07/2011 at 15:16.
Pushed by cgiboudeaux into branch '4.6'.

Change appName to kmail2.
This way, clicking on a mailto link will not result in a warning if Kontact is running.

BUG: 265491
(cherry picked from commit 8f603f5f988a53fdd480f568c704417ea5fa7212)

M  +1    -1    kontact/plugins/kmail/kmail_plugin.cpp     

http://commits.kde.org/kdepim/d5794e75bc437435e99d9f7d10e6a75f9730d0c6