Change appName to kmail2. This way, clicking on a mailto link will not result in a warning if Kontact is running.

BUG: 265491